--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.1",
     "@types/react-router-dom": "^5.3.3",
+    "ahooks": "^3.9.5",
     "antd": "^5.27.3",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
