关于菜单项

--- a/.github/workflows/build-electron-app.yml
+++ b/.github/workflows/build-electron-app.yml
@@ -16,6 +16,7 @@ on:
     branches: [main, master]
     paths:
       - "src/**"
+      - "electron/**"
       - "package.json"
   # pull_request:
   #   branches: [main, master]
