更新win环境的安装程序

--- a/package.json
+++ b/package.json
@@ -38,6 +38,17 @@
         "nsis"
       ]
     },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "perMachine": false,
+      "allowElevation": true,
+      "installerIcon": "src/assets/logo.ico",
+      "uninstallerIcon": "src/assets/logo.ico",
+      "installerHeaderIcon": "src/assets/logo.ico",
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
     "linux": {
       "icon": "src/assets/logo.icns",
       "target": [
