--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "dayjs": "^1.11.18",
     "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
+    "number-precision": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.2",
